2007 04 30 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Flush Xwindow while switch desktop.
	* Use a hack to make framework compile when etoile.make is in front of framework.make

2007 04 30 Quentin Mathe <qmathe@club-internet.fr>

	* GNUmakefile: Fixed compilation with gnustep-make version older than 2.0.

2007 04 28 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Turn into framework.

2007 04 24 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Find desktop of window.

2007 04 14 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Set active window with _NET_ACTIVE_WINDOW.

2007 04 11 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Find active window with _NET_ACTIVE_WINDOW.

2007 04 01 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* XFunctions.m: return right after XKillClient() to avoid complaint.

2007 03 16 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Add support for freedesktop.org base directories.

2007 02 17 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Format README in reStructuredText.

2006-12-16 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* XFunctions: add XGNUstepWindowLevel() for gnustep window level;
	* XFunctions: remove as much memory as possible.
          If AZDock becomes unstable, revert this change. 

2006-12-06  Quentin Mathe <qmathe@club-internet.fr>

	* GNUmakefile: Install by default in SYSTEM domain (done with 
	GNUSTEP_SYSTEM_DOMAIN extension recently added to gnustep-make and not 
	yet released).

2006-11-18 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Remove warnings for GCC-4.1.

2006-10-20 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Return 0 if number of desktops is not available.

2006-10-01  Quentin Mathe <qmathe@club-internet.fr>

	* Comment on IconWindowHint.

2006-09-26  Quentin Mathe <qmathe@club-internet.fr>

	* GNUmakefile: Modified to include 'etoile.make'.

2006-09-24 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Use XGetCommand to get WM_COMMAND property.

2006-09-03 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* XFunctions.h:
	* XFunctions.m: